--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.grarak.kerneladiutordonate"
+        applicationId "com.grarak.kerneladiutor"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 128
