--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.grarak.kerneladiutor"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 128
-        versionName "0.9.11.3"
+        versionCode 131
+        versionName "0.9.11.5 beta"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
