--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.grarak.kerneladiutor"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 131
-        versionName "0.9.11.5 beta"
+        versionCode 132
+        versionName "0.9.11.5-1 beta"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
