--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.grarak.kerneladiutor"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 133
-        versionName "0.9.11.5-2 beta"
+        versionCode 134
+        versionName "0.9.11.6 beta"
     }
     buildTypes {
         release {
