--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.grarak.kerneladiutor"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 136
-        versionName "0.9.11.7-1 beta"
+        versionCode 137
+        versionName "0.9.12 beta"
     }
     buildTypes {
         release {
