--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'org.adw.library:discrete-seekbar:1.0.1'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
@@ -35,4 +34,6 @@ dependencies {
     compile('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
         transitive = true;
     }
+    compile 'com.google.firebase:firebase-crash:9.0.2'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
 }
