--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
         transitive = true;
     }
     compile 'com.google.firebase:firebase-crash:9.0.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
 }
