--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".activities.tools.CustomControlsActivity" />
         <activity android:name=".activities.EditorActivity" />
         <activity android:name=".activities.FilePickerActivity" />
-        <activity android:name=".activities.downloads.DownloadsActivity" />
+        <activity android:name=".activities.tools.DownloadsActivity" />
+        <activity android:name=".activities.tools.ProfileActivity" />
 
         <receiver android:name=".boot.Receiver">
             <intent-filter>
