Add cm tile support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:9.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
+    compile 'org.cyanogenmod:platform.sdk:5.0.1'
 }
