--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.grarak.kerneladiutor">
 
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="cyanogenmod.permission.PUBLISH_CUSTOM_TILE" />
 
     <application
         android:allowBackup="true"
@@ -45,7 +47,7 @@
         <receiver android:name=".services.boot.Service$CancelReceiver" />
 
         <!-- Profile Widget -->
-        <receiver android:name=".services.profile.ProfileWidget">
+        <receiver android:name=".services.profile.Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -56,8 +58,17 @@
         </receiver>
 
         <service
-            android:name=".services.profile.ProfileWidget$WidgetService"
+            android:name=".services.profile.Widget$WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <!-- CM SDK -->
+        <receiver
+            android:name=".services.profile.Tile"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.grarak.kerneladiutor.action.ACTION_TOGGLE_STATE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
