--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
         transitive = true;
     }
+    compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.google.firebase:firebase-crash:9.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
