--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     }
     compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.google.firebase:firebase-crash:9.0.2'
+    compile 'com.mattprecious.swirl:swirl:1.0.0'
     compile('com.mikepenz:aboutlibraries:5.7.1@aar') {
         transitive = true;
     }
