--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="cyanogenmod.permission.PUBLISH_CUSTOM_TILE" />
 
     <application
@@ -15,7 +16,8 @@
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme.NoActionBar">
 
         <activity android:name=".activities.MainActivity">
             <intent-filter>
@@ -36,6 +38,9 @@
         <activity android:name=".activities.FilePickerActivity" />
         <activity android:name=".activities.tools.DownloadsActivity" />
         <activity android:name=".activities.tools.profile.ProfileActivity" />
+        <activity
+            android:name=".activities.SecurityActivity"
+            android:configChanges="locale|keyboard|keyboardHidden|orientation|screenSize|navigation" />
 
         <receiver android:name=".services.boot.Receiver">
             <intent-filter>
