Revert "Remove firebase"
This reverts commit f52865a545048ceda8e99a839f575b7a9f969089.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,12 @@ dependencies {
         transitive = true;
     }
     compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
+    compile 'com.google.firebase:firebase-crash:9.0.2'
     compile 'com.mattprecious.swirl:swirl:1.0.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
     compile 'org.cyanogenmod:platform.sdk:5.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
