--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
     implementation 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     implementation 'com.mattprecious.swirl:swirl:1.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'org.adw.library:discrete-seekbar:1.0.1'
     implementation 'org.cyanogenmod:platform.sdk:5.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
     testImplementation 'junit:junit:4.12'
 }
 
