--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.google.firebase:firebase-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
